@@ -2,7 +2,9 @@ package anyang.energe;
 
 import static marmot.optor.AggregateFunction.SUM;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.apache.log4j.PropertyConfigurator;
 
@@ -18,19 +20,14 @@ import utils.CommandLine;
 import utils.CommandLineParser;
 import utils.Size2d;
 import utils.StopWatch;
-import utils.stream.FStream;
 
 /**
  * 
  * @author Kang-Woo Lee (ETRI)
  */
-public class T07_GridAnalysisGas2017 {
-	private static final String INPUT = "tmp/anyang/map_gas2017";
-	private static final String OUTPUT = "tmp/anyang/grid_gas2017";
-	
-	private static final List<String> COL_NAMES = FStream.rangeClosed(1, 12)
-														.map(i -> "month_" + i)
-														.toList();
+public class A06_GridAnalysisGas {
+	private static final String INPUT = "tmp/anyang/map_gas";
+	private static final String OUTPUT = "tmp/anyang/grid/grid_gas";
 	
 	public static final void main(String... args) throws Exception {
 		PropertyConfigurator.configure("log4j.properties");
@@ -56,15 +53,17 @@ public class T07_GridAnalysisGas2017 {
 		Envelope bounds = cadastral.getBounds();
 		Size2d cellSize = new Size2d(1000, 1000);
 		
-		String updateExpr = FStream.of(COL_NAMES)
-									.map(c -> String.format("%s *= ratio", c))
-									.join("; ");
-		List<AggregateFunction> aggrs = FStream.of(COL_NAMES)
-												.map(c -> SUM(c).as(c))
-												.toList();
+		int[] years = {2011, 2012, 2013, 2014, 2015, 2016, 2017};
+		
+		String updateExpr = Arrays.stream(years)
+									.mapToObj(year -> String.format("gas_%d *= ratio", year))
+									.collect(Collectors.joining("; "));
+		List<AggregateFunction> aggrs = Arrays.stream(years)
+											.mapToObj(year -> SUM("gas_"+year).as("value_" + year))
+											.collect(Collectors.toList());
 		
 		Plan plan;
-		plan = marmot.planBuilder("2017 가스 사용량 격자 분석")
+		plan = marmot.planBuilder("가스 사용량 격자 분석")
 					.load(INPUT)
 					.assignSquareGridCell("the_geom", bounds, cellSize)
 					.intersection("the_geom", "cell_geom", "overlap")
@@ -72,7 +71,7 @@ public class T07_GridAnalysisGas2017 {
 					.update(updateExpr)
 					.groupBy("cell_id")
 						.tagWith("cell_geom,cell_pos")
-						.workerCount(7)
+						.workerCount(17)
 						.aggregate(aggrs)
 					.expand("x:long,y:long", "x = cell_pos.getX(); y = cell_pos.getY()")
 					.project("cell_geom as the_geom, x, y, *-{cell_geom,x,y}")
@@ -81,8 +80,8 @@ public class T07_GridAnalysisGas2017 {
 		GeometryColumnInfo info = new GeometryColumnInfo("the_geom", "EPSG:5186");
 		marmot.createDataSet(OUTPUT, info, plan, true);
 		
-		for ( int month = 1; month <= 12; ++month ) {
-			extractToMonth(marmot, month);
+		for ( int year: years ) {
+			extractToYear(marmot, year);
 		}
 		marmot.deleteDataSet(OUTPUT);
 		marmot.disconnect();
@@ -90,19 +89,38 @@ public class T07_GridAnalysisGas2017 {
 		System.out.println("elapsed time: " + watch.stopAndGetElpasedTimeString());
 	}
 	
-	private static void extractToMonth(PBMarmotClient marmot, int month) {
-		String output = String.format("%s_splits/%d", OUTPUT, month);
-		String projectExpr = String.format("the_geom,x,y,month_%d as value", month);
+	private static void extractToYear(PBMarmotClient marmot, int year) {
+		String output = OUTPUT + "_" + year;
+		String projectExpr = String.format("the_geom,x,y,value_%d as value", year);
 		
 		DataSet ds = marmot.getDataSet(OUTPUT);
 		GeometryColumnInfo info = ds.getGeometryColumnInfo();
 		
 		Plan plan;
-		plan = marmot.planBuilder("월별 격자 분석 추출")
+		plan = marmot.planBuilder("연도별 격자 분석 추출")
 					.load(OUTPUT)
 					.project(projectExpr)
 					.store(output)
 					.build();
 		marmot.createDataSet(output, info, plan, true);
 	}
+	
+//	private static void writeAsRaster(DataSet ds, File file, Envelope bounds, Size2d cellSize)
+//		throws IllegalArgumentException, IOException {
+//		GeometryColumnInfo info = ds.getGeometryColumnInfo();
+//		
+//		CoordinateReferenceSystem crs = CRSUtils.toCRS(info.srid());
+//		Rectangle2D rect = new Rectangle2D.Double(bounds.getMinX(), bounds.getMinY(),
+//												bounds.getWidth(), bounds.getHeight());
+//		Envelope2D bbox = new Envelope2D(crs, rect);
+//		Dimension gridDim = GeoClientUtils.divide(bounds, cellSize)
+//										.ceilToInt()
+//										.toDimension();
+//		GridCoverage2D grid = VectorToRasterProcess.process(
+//										GeoToolsUtils.toSimpleFeatureCollection(ds),
+//										"value", gridDim, bbox, "value", null);
+//		ArcGridWriter writer = new ArcGridWriter(new File("/home/kwlee/tmp/xxx.tiff"));
+//		writer.write(grid, null);
+//		writer.dispose();
+//	}
 }
